--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,5 @@
 // colors
-$bgcolor: rgba(17,3,17,.97);
+$bgcolor: rgba(17, 3, 17, .95);
 $bgcolor-loader:rgb(17,3,17);
 $bgcolor-footer: rgb(10, 2, 10);
 $font-color-default: #ffffff;
@@ -14,6 +14,7 @@ $font-size-default: 22px;
 $font-size-small: 18px;
 $font-size-tiny: 14px;
 $font-size-tiny-tablet: 12px;
+$font-size-normal-mobile: 10px;
 $font-size-tiny-mobile: 8px;
 $font-size-big: 26px;
 $font-size-huge: 42px;
