--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -94,6 +94,40 @@ body::after {
     background-image: url(../images/thomas-and-friends-bg.png);
 }
 
+.lightbox {
+    display: none;
+    background: rgba(0, 0, 0, 0.85);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    
+    .lightbox-header {
+      @include font-headline;
+      color: $font-color-default;
+      text-align: center;
+      padding: $spacing-unit * 2;
+    }
+    
+    .lightbox-container {
+      position: relative;
+      width: 80%;
+      height: 80%;
+      margin: auto;
+      display: flex;
+    }
+    
+    .lightbox-container iframe {
+      position: relative;
+      width: 100%;
+      margin: auto;
+      height: 100%;
+    }
+}
+
+
 .content {
     width: 70%;
     height: auto;
@@ -433,6 +467,7 @@ body::after {
         font-size: $font-size-small;
 
         .video-wrapper {
+            position: relative;
             display: grid;
             width: 100%;
             height: 300px;
@@ -442,9 +477,22 @@ body::after {
 
             .video {
             margin-right: $spacing-unit;
+            position: relative;
+
+                .video-overlay {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    z-index: 2;
+                    height: 100%;
+                    width: 100%;
+                    opacity: 1%;
+                    
+                }
 
             .video__description {
                 text-align: center;
+                margin-bottom: $spacing-unit * 2;
             }
             }
         }
@@ -470,6 +518,7 @@ body::after {
         padding-top: $spacing-unit * 2.5;
     }
 }
+
 
 @keyframes pulse {
     0% { transform: scale(1); }
@@ -499,7 +548,11 @@ body::after {
             font-size: $font-size-tiny;
             }
           }
-      }
+        }
+        .about-content iframe {
+          width: 80%;
+          min-width: 320px;
+        }
     }
     .crew-container {
     .crew-wrapper {
