--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -462,19 +462,20 @@ body::after {
 
     .video-container {
         @include font-normal;
-        width: 100%;
+        width: 90%;
         padding-top: $spacing-unit * 8;
         height: auto;
+        margin: auto;
         font-size: $font-size-small;
 
         .video-wrapper {
             position: relative;
             display: grid;
-            width: 90%;
+            width: 100%;
             margin: auto;
             height: 300px;
             margin-top: $spacing-unit * 5;
-            grid-template-columns: 33% 33% 33%;
+            grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 100%;
 
             .video {
