--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -370,7 +370,7 @@ body::after {
             .card {
                 @include font-normal;
                 display: flex;
-                width: 25%;
+                flex-basis: 27.5%;
                 background-color: rgba(255, 255, 255, 0.123);
                 transform: skew(-4deg);
                 margin: auto;
@@ -413,6 +413,10 @@ body::after {
             .about__video {
                 padding-top: $spacing-unit * 5;
                 align-self: center;
+            }
+
+            #about__video-mobile {
+                display: none;
             }
         }
 
@@ -572,6 +576,12 @@ body::after {
 
 @media (max-width: 900px) {
     .content {
+        width: 100%;
+        .navbar {
+            .navbar__wrapper {
+            width: 100%;
+            }
+        }
         &__banner {
             display: flex;
             justify-content: center;
@@ -589,11 +599,6 @@ body::after {
                   .card__description {
                   font-size: $font-size-tiny-tablet;
                   }
-                }
-            }
-            .about-content {
-                .about__video {
-                    width: 80%;
                 }
             }
           }
@@ -635,15 +640,33 @@ body::after {
         }
         .about-container {
             .about-wrapper{
+                flex-direction: column;
+                height: auto;
+                margin: auto;
+                width: 70%;
               .card {
+                  width: 100%;
+                  margin-top: $spacing-unit * 3;
+                  padding-top: $spacing-unit * 2;
                 .card__header {
-                  font-size: $font-size-tiny-tablet;
+                  font-size: $font-size-tiny;
+                  padding-bottom: $spacing-unit * 1.5;
                   }
                   .card__description {
-                  font-size: $font-size-tiny-mobile;
-                  }
+                    padding-bottom: $spacing-unit;
+                    }
                 }
             }
+            .about-content {
+            #about__video-desktop {
+                display: none;
+            }
+            #about__video-mobile {
+                display: flex;
+                margin-top: $spacing-unit * 2.5;
+                padding: 0;
+            }
+        }
           }
         .headline {
             text-align: center;
