add grim to the crew

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -579,8 +579,8 @@ body::after {
   display: grid;
   -ms-grid-columns: 25% 25% 25% 25%;
       grid-template-columns: 25% 25% 25% 25%;
-  -ms-grid-rows: 25% 25% 25% 25%;
-      grid-template-rows: 25% 25% 25% 25%;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
   height: auto;
   text-align: center;
 }
