add closeLightbox to global methods, use sass watch

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -499,6 +499,10 @@ body::after {
             .video__description {
                 text-align: center;
             }
+
+            iframe {
+                border: 0;
+            }
             }
         }
     }
