--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,6 +5,7 @@ $bgcolor-footer: rgb(10, 2, 10);
 $font-color-default: #ffffff;
 $font-color-default-hover: #ffffff4b;
 $font-color-dark: #000000;
+$font-family: 'Barlow', sans-serif;
 
 //spacing unit
 $spacing-unit: 10px;
@@ -21,13 +22,13 @@ $font-size-huge: 42px;
 $font-size-huge-mobile: 30px;
 
 @mixin font-headline {
-    font-family: 'Barlow', sans-serif;
+    font-family: $font-family;
     font-weight: 500;
     color: #ffffff;
 }
 
 @mixin font-normal {
-    font-family: 'Barlow', sans-serif;
+    font-family: $font-family;
     font-weight: 100;
     color: #ffffff;
 }
