--- a/styles/checkTheAvaRoad.css
+++ b/styles/checkTheAvaRoad.css
@@ -147,6 +147,7 @@ body::after {
   display: flex;
   width: 70%;
   margin: auto;
+  justify-content: center;
 }
 
 .navbar__logo {
@@ -170,9 +171,10 @@ body::after {
 }
 
 #tool {
-  margin-top: 60px;
   display: flex;
   flex-direction: column;
+  max-width: 1300px;
+  margin: 60px auto 0;
 }
 
 #tool h3 {
@@ -182,6 +184,60 @@ body::after {
   font-size: 18px;
   margin: 40px auto 0;
   text-align: center;
+}
+
+.legend {
+  color: #ffffff;
+  text-align: center;
+  margin-top: 20px;
+  font-family: "Barlow", sans-serif;
+}
+
+.legend .items {
+  display: flex;
+  justify-content: space-around;
+  width: 70%;
+  margin: 20px auto;
+}
+
+.legend .item {
+  display: flex;
+  align-items: center;
+}
+
+.item span {
+  padding-left: 5px;
+}
+
+.square {
+  width: 10px;
+  height: 10px;
+}
+
+.green-chest-color .square {
+  background: rgb(12, 160, 12);
+}
+
+.blue-chest-color .square {
+  background: rgb(41, 69, 231);
+}
+
+.gold-chest-color .square {
+  background: rgb(247, 210, 0);
+}
+
+.dungeon-color .square {
+  background: rgb(71, 206, 188);
+}
+
+.gathering-spot-color .square {
+  background: rgb(104, 41, 33);
+}
+
+.search__results {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .search__component {
@@ -216,11 +272,49 @@ body::after {
   font-weight: 500;
   color: #ffffff;
   max-width: 360px;
-  margin: 10px 20px;
+  margin: 10px 30px;
+  background-color: rgba(32, 6, 32, 0.95);
+  border-radius: 15px;
+}
+
+.result img {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.result h4 {
+  font-size: 18px;
+  padding: 5px 0;
+}
+
+.green-chest-color {
+  color: rgb(12, 160, 12);
+}
+
+.blue-chest-color {
+  color: rgb(41, 69, 231);
+}
+
+.gold-chest-color {
+  color: rgb(247, 210, 0);
+}
+
+.dungeon-color {
+  color: rgb(71, 206, 188);
+}
+
+.gathering-spot-color {
+  color: rgb(104, 41, 33);
 }
 
 .result h4, .result h5, .result p {
   text-align: center;
+}
+
+.result__details p {
+  border-top: 1px solid rgba(93, 16, 93, 0.95);
+  margin-top: 10px;
+  padding: 10px 0;
 }
 
 .result__details--chests, .result__details--gatheringspots {
@@ -241,6 +335,10 @@ body::after {
   display: flex;
   justify-content: space-around;
   margin: 10px 0;
+}
+
+.result__details--gatheringspots {
+  margin-bottom: 20px;
 }
 
 .green-chest::before, .blue-chest::before, .gold-chest::before, .dungeon::before, .gatheringspot--leather::before, .gatheringspot--iron::before {
@@ -297,6 +395,11 @@ body::after {
   }
   100% {
     transform: scale(1);
+  }
+}
+@media (max-width: 1800px) {
+  .search__results {
+    justify-content: center;
   }
 }
 @media (max-width: 900px) {
