--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -130,6 +130,7 @@ body::after {
     display: flex;
     width: 70%;
     margin: auto;
+    justify-content: center;
 }
 
 .navbar__logo {
@@ -151,19 +152,75 @@ body::after {
     
 }
 
+//search tool
 #tool {
-    margin-top: 60px;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    max-width: 1300px;
+    margin:60px auto 0;
 }
 
-
-//search tool
 #tool h3 {
     @include font-headline;
     font-size: 18px;
     margin: 40px auto 0;
     text-align: center;
+}
+
+
+//legend part
+.legend {
+    color: $font-color-default;
+    text-align: center;
+    margin-top: 20px;
+    font-family: $font-family;
+}
+.legend .items {
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+    margin: 20px auto;
+}
+
+.legend .item {
+    display: flex;
+    align-items: center;
+} 
+
+
+.item span {
+    padding-left: 5px;
+}
+
+.square {
+    width: 10px;
+    height: 10px;
+}
+
+.green-chest-color .square {
+    background: $green-chest-color;
+}
+
+.blue-chest-color .square {
+    background: $blue-chest-color;
+}
+
+.gold-chest-color .square {
+    background: $gold-chest-color;
+}
+.dungeon-color .square {
+    background: $dungeon-color;
+}
+
+.gathering-spot-color .square {
+    background: $gathering-spot-color;
+}
+
+//filter cmp
+.search__results {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .search__component {
@@ -197,11 +254,50 @@ body::after {
 .result {
     @include font-headline;
     max-width: 360px;
-    margin: 10px 20px;
+    margin: 10px 30px;
+    background-color: lighten($bgcolor, 3.5%);
+    border-radius: 15px;
+}
+
+
+
+.result img {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.result h4 {
+    font-size: 18px;
+    padding: 5px 0;
+}
+
+.green-chest-color {
+    color: $green-chest-color;
+}
+
+.blue-chest-color {
+    color: $blue-chest-color;
+}
+
+.gold-chest-color {
+    color: $gold-chest-color;
+}
+
+.dungeon-color {
+    color:$dungeon-color;
+}
+
+.gathering-spot-color {
+color: $gathering-spot-color;
 }
 
 .result h4, .result h5, .result p {
     text-align: center;
+}
+.result__details p {
+    border-top: 1px solid lighten($bgcolor, 17.5%);
+    margin-top: 10px;
+    padding: 10px 0;
 }
 
 .result__details--chests, .result__details--gatheringspots {
@@ -222,6 +318,10 @@ body::after {
     display: flex;
     justify-content: space-around;
     margin: 10px 0;
+}
+
+.result__details--gatheringspots {
+    margin-bottom: 20px;
 }
 
 .green-chest::before, .blue-chest::before, .gold-chest::before, .dungeon::before, .gatheringspot--leather::before,.gatheringspot--iron::before  {
@@ -267,6 +367,13 @@ body::after {
     0% { transform: scale(1); }
     50% { transform: scale(1.1); }
     100% { transform: scale(1); }
+  }
+
+
+  @media(max-width: $ctar-lg-breakpoint) {
+    .search__results {
+        justify-content: center;
+    }
   }
 
 
