--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,7 +5,16 @@ $bgcolor-footer: rgb(10, 2, 10);
 $font-color-default: #ffffff;
 $font-color-default-hover: #ffffff4b;
 $font-color-dark: #000000;
+$green-chest-color: rgb(12, 160, 12);
+$blue-chest-color: rgb(41, 69, 231);
+$gold-chest-color: rgb(247, 210, 0);
+$dungeon-color: rgb(71, 206, 188);
+$gathering-spot-color: rgb(104, 41, 33);
+
 $font-family: 'Barlow', sans-serif;
+
+//custom breakpoints
+$ctar-lg-breakpoint: 1800px;
 
 //spacing unit
 $spacing-unit: 10px;
