add filtersAmount and filtersRequirements, add creating filters dynamically, add dicitonaries for config, fix styles and add RWD, add comments for existing bug to solve it tomorrow

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -15,6 +15,7 @@ $font-family: 'Barlow', sans-serif;
 
 //custom breakpoints
 $ctar-lg-breakpoint: 1800px;
+$lg-breakpoint: 992px;
 
 //spacing unit
 $spacing-unit: 10px;
