--- a/styles/checkTheAvaRoad.css
+++ b/styles/checkTheAvaRoad.css
@@ -267,6 +267,88 @@ body::after {
   cursor: pointer;
 }
 
+.filters {
+  background-color: rgba(32, 6, 32, 0.95);
+  display: flex;
+  color: #ffffff;
+  font-family: "Barlow", sans-serif;
+  margin-bottom: 50px;
+}
+
+.filters p {
+  padding-top: 10px;
+}
+
+.filters__chests, .filters__dungeons, .filters__gatheringspots {
+  width: 30%;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.filters__chests--chest {
+  display: flex;
+  width: 100%;
+  align-items: flex-end;
+  justify-content: center;
+  margin-bottom: 12.5px;
+}
+
+#green-chest-checkbox, #blue-chest-checkbox, #gold-chest-checkbox, #dungeons-checkbox, #leather-checkbox,
+#iron-checkbox, #stone-checkbox, #wood-checkbox, #flux-checkbox {
+  display: none;
+}
+
+label[for=green-chest-checkbox] img, label[for=blue-chest-checkbox] img, label[for=gold-chest-checkbox] img,
+label[for=dungeons-checkbox] img, label[for=leather-checkbox] img, label[for=iron-checkbox] img,
+label[for=stone-checkbox] img, label[for=wood-checkbox] img, label[for=flux-checkbox] img {
+  height: 50px;
+  width: 50px;
+  filter: grayscale(100%);
+}
+
+#green-chest-checkbox:checked + label[for=green-chest-checkbox] img,
+#blue-chest-checkbox:checked + label[for=blue-chest-checkbox] img,
+#gold-chest-checkbox:checked + label[for=gold-chest-checkbox] img,
+#dungeons-checkbox:checked + label[for=dungeons-checkbox] img,
+#leather-checkbox:checked + label[for=leather-checkbox] img,
+#leather-checkbox:checked + label[for=iron-checkbox] img,
+#leather-checkbox:checked + label[for=stone-checkbox] img,
+#leather-checkbox:checked + label[for=wood-checkbox] img,
+#leather-checkbox:checked + label[for=flux-checkbox] img {
+  filter: grayscale(0);
+}
+
+.filters__chests--tier, .filters__chests--amount {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+}
+
+input.chest-amount {
+  text-align: center;
+}
+
+.add-filter-btn {
+  padding: 0 5px;
+  height: 20px;
+}
+
+.add-filter-btn.disabled {
+  background: rgba(80, 76, 76, 0.788);
+  color: #ffffff;
+  border: none;
+}
+
+.add-filter-btn.disabled:hover {
+  cursor: not-allowed;
+}
+
+.hidden {
+  display: none;
+}
+
 .result {
   font-family: "Barlow", sans-serif;
   font-weight: 500;
@@ -402,11 +484,16 @@ body::after {
     justify-content: center;
   }
 }
-@media (max-width: 900px) {
-  .navbar__list {
-    display: none;
+@media (max-width: 992px) {
+  .filters {
+    display: flex;
+    flex-direction: column;
   }
-  .navbar__wrapper {
-    justify-content: center;
+  .filters__chests, .filters__dungeons {
+    width: 100%;
+  }
+  .filters__chests--gold, .filters__dungeons--wrapper {
+    border-bottom: 1px solid rgba(93, 16, 93, 0.95);
+    padding-bottom: 10px;
   }
 }/*# sourceMappingURL=checkTheAvaRoad.css.map */
