--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -251,6 +251,95 @@ body::after {
     cursor: pointer;
 }
 
+
+//filters
+
+.filters {
+    background-color: lighten($bgcolor, 3.5%);
+    display: flex;
+    color: $font-color-default;
+    font-family: $font-family;
+    margin-bottom: 50px;
+}
+
+.filters p {
+    padding-top: 10px;
+}
+
+
+.filters__chests, .filters__dungeons, .filters__gatheringspots {
+    width: 30%;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.filters__chests--chest {
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+    justify-content: center;
+    margin-bottom: 12.5px;
+    // margin: auto;
+}
+
+
+//icon checkboxes
+#green-chest-checkbox, #blue-chest-checkbox, #gold-chest-checkbox, #dungeons-checkbox, #leather-checkbox,
+ #iron-checkbox, #stone-checkbox, #wood-checkbox, #flux-checkbox {
+    display: none;
+}
+
+label[for='green-chest-checkbox'] img, label[for='blue-chest-checkbox'] img, label[for='gold-chest-checkbox'] img,
+ label[for='dungeons-checkbox'] img, label[for='leather-checkbox'] img, label[for='iron-checkbox'] img,
+ label[for='stone-checkbox'] img, label[for='wood-checkbox'] img, label[for='flux-checkbox'] img    {
+    height: 50px;
+    width: 50px;
+    filter: grayscale(100%);
+}
+
+#green-chest-checkbox:checked + label[for='green-chest-checkbox'] img, 
+#blue-chest-checkbox:checked + label[for='blue-chest-checkbox'] img,
+#gold-chest-checkbox:checked + label[for='gold-chest-checkbox'] img,
+#dungeons-checkbox:checked + label[for='dungeons-checkbox'] img,
+#leather-checkbox:checked + label[for='leather-checkbox'] img,
+#leather-checkbox:checked + label[for='iron-checkbox'] img,
+#leather-checkbox:checked + label[for='stone-checkbox'] img,
+#leather-checkbox:checked + label[for='wood-checkbox'] img,
+#leather-checkbox:checked + label[for='flux-checkbox'] img  {
+    filter: grayscale(0);
+}
+
+.filters__chests--tier, .filters__chests--amount {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+}
+
+input.chest-amount {
+    text-align: center;
+}
+
+.add-filter-btn {
+    padding: 0 5px;
+    height: 20px;
+}
+.add-filter-btn.disabled {
+    background:rgba(80, 76, 76, 0.788);
+    color: $font-color-default;
+    border: none;
+}
+.add-filter-btn.disabled:hover {
+    cursor: not-allowed;
+}
+
+.hidden {
+    display: none;
+}
+
+
+
 .result {
     @include font-headline;
     max-width: 360px;
@@ -381,13 +470,18 @@ color: $gathering-spot-color;
  
 //   }
 
-@media (max-width: 900px) {
-    .navbar__list {
-        display: none;
-      }
-      .navbar__wrapper {
-        justify-content: center;
-      }
+@media (max-width: $lg-breakpoint) {
+    .filters {
+        display: flex;
+        flex-direction: column;
+    }
+    .filters__chests, .filters__dungeons {
+        width: 100%;
+    }
+    .filters__chests--gold, .filters__dungeons--wrapper {
+        border-bottom: 1px solid lighten($bgcolor, 17.5%);
+        padding-bottom: 10px;
+    }
 }
 
 @media (max-width: 540px) {
