--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -304,10 +304,10 @@ label[for='green-chest-checkbox'] img, label[for='blue-chest-checkbox'] img, lab
 #gold-chest-checkbox:checked + label[for='gold-chest-checkbox'] img,
 #dungeons-checkbox:checked + label[for='dungeons-checkbox'] img,
 #leather-checkbox:checked + label[for='leather-checkbox'] img,
-#leather-checkbox:checked + label[for='iron-checkbox'] img,
-#leather-checkbox:checked + label[for='stone-checkbox'] img,
-#leather-checkbox:checked + label[for='wood-checkbox'] img,
-#leather-checkbox:checked + label[for='flux-checkbox'] img  {
+#iron-checkbox:checked + label[for='iron-checkbox'] img,
+#stone-checkbox:checked + label[for='stone-checkbox'] img,
+#wood-checkbox:checked + label[for='wood-checkbox'] img,
+#flux-checkbox:checked + label[for='flux-checkbox'] img  {
     filter: grayscale(0);
 }
 
@@ -322,21 +322,38 @@ input.chest-amount {
 }
 
 .add-filter-btn {
-    padding: 0 5px;
-    height: 20px;
+    position: relative;
+    background: transparent;
+    border: 2px solid lighten($bgcolor, 15%);
+    color: lighten($bgcolor, 50%);
+    border-radius: 5px;
+    width: 40px;
+    height: 35px;
+    top: 10px;
 }
-.add-filter-btn.disabled {
-    background:rgba(80, 76, 76, 0.788);
-    color: $font-color-default;
-    border: none;
+
+.add-filter-btn:hover {
+    background: lighten($bgcolor, 15%);
+    cursor: pointer;
 }
+
 .add-filter-btn.disabled:hover {
     cursor: not-allowed;
 }
 
 .hidden {
-    display: none;
+    visibility: hidden;
 }
+
+.error-wrapper {
+    border: 1px solid red;
+    padding: 10px 15px;
+}
+
+p[class*='error'] {
+    color: red;
+}
+
 
 
 
@@ -471,6 +488,9 @@ color: $gathering-spot-color;
 //   }
 
 @media (max-width: $lg-breakpoint) {
+    .content {
+        width: 100%;
+    }
     .filters {
         display: flex;
         flex-direction: column;
